--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-app-intro-slider": "^4.0.2",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-image-slider-box": "^1.0.12",
     "react-native-onboarding-swiper": "^1.1.1",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
